<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.b00663982.clubmoygaa.MainActivity">

    <ImageView
        android:id="@+id/loginCrest"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/crest" android:contentDescription="@string/loginCrest" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/passwordLogin"
        android:layout_below="@+id/loginCrest"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/emailLogin"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/passwordLogin"
        android:inputType="textPassword" />

   <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/signUpHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/registerClick" />



</RelativeLayout>
