<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.b00663982.clubmoygaa.SignUpActivity">

    <ImageView
        android:id="@+id/registerCrest"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/crestSignUp"
        app:srcCompat="@drawable/crest" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/passwordRegister"
        android:layout_below="@+id/registerCrest"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/emailSignUp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/passwordSignUp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/logInHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/already_have_an_account_log_in_here" />

</RelativeLayout>
